// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transfer should render correctly 1`] = `
<div>
  <div
    class="fishd-transfer"
  >
    <div
      class="fishd-transfer-list"
    >
      <div
        class="fishd-transfer-list-header"
      >
        <label
          class="fishd-checkbox-wrapper"
        >
          <span
            class="fishd-checkbox fishd-checkbox-checked"
          >
            <input
              checked=""
              class="fishd-checkbox-input"
              type="checkbox"
            />
            <span
              class="fishd-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="fishd-transfer-list-header-selected"
        >
          <span>
            1/2 项
          </span>
          <span
            class="fishd-transfer-list-header-title"
          />
        </span>
      </div>
      <div
        class="fishd-transfer-list-body"
      >
        <ul
          class="fishd-transfer-list-content"
        >
          <li
            class="fishd-transfer-list-content-item"
          >
            <label
              class="fishd-checkbox-wrapper"
            >
              <span
                class="fishd-checkbox fishd-checkbox-checked"
              >
                <input
                  checked=""
                  class="fishd-checkbox-input"
                  type="checkbox"
                />
                <span
                  class="fishd-checkbox-inner"
                />
              </span>
            </label>
            <span />
          </li>
          <li
            class="fishd-transfer-list-content-item fishd-transfer-list-content-item-disabled"
          >
            <label
              class="fishd-checkbox-wrapper"
            >
              <span
                class="fishd-checkbox fishd-checkbox-disabled"
              >
                <input
                  class="fishd-checkbox-input"
                  disabled=""
                  type="checkbox"
                />
                <span
                  class="fishd-checkbox-inner"
                />
              </span>
            </label>
            <span />
          </li>
        </ul>
        <div
          class="fishd-transfer-list-body-not-found"
        >
          无匹配结果
        </div>
      </div>
    </div>
    <div
      class="fishd-transfer-operation"
    >
      <button
        class="fishd-btn fishd-btn-primary fishd-btn-sm fishd-btn-icon-only"
        type="button"
      >
        <i
          class="fishdicon fishdicon-right"
        />
      </button>
      <button
        class="fishd-btn fishd-btn-primary fishd-btn-sm fishd-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          class="fishdicon fishdicon-left"
        />
      </button>
    </div>
    <div
      class="fishd-transfer-list"
    >
      <div
        class="fishd-transfer-list-header"
      >
        <label
          class="fishd-checkbox-wrapper"
        >
          <span
            class="fishd-checkbox"
          >
            <input
              class="fishd-checkbox-input"
              type="checkbox"
            />
            <span
              class="fishd-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="fishd-transfer-list-header-selected"
        >
          <span>
            1 项
          </span>
          <span
            class="fishd-transfer-list-header-title"
          />
        </span>
      </div>
      <div
        class="fishd-transfer-list-body"
      >
        <ul
          class="fishd-transfer-list-content"
        >
          <li
            class="fishd-transfer-list-content-item"
          >
            <label
              class="fishd-checkbox-wrapper"
            >
              <span
                class="fishd-checkbox"
              >
                <input
                  class="fishd-checkbox-input"
                  type="checkbox"
                />
                <span
                  class="fishd-checkbox-inner"
                />
              </span>
            </label>
            <span />
          </li>
        </ul>
        <div
          class="fishd-transfer-list-body-not-found"
        >
          无匹配结果
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Transfer should show sorted targetkey 1`] = `
<div>
  <div
    class="fishd-transfer"
  >
    <div
      class="fishd-transfer-list"
    >
      <div
        class="fishd-transfer-list-header"
      >
        <label
          class="fishd-checkbox-wrapper"
        >
          <span
            class="fishd-checkbox"
          >
            <input
              class="fishd-checkbox-input"
              type="checkbox"
            />
            <span
              class="fishd-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="fishd-transfer-list-header-selected"
        >
          <span>
            1 项
          </span>
          <span
            class="fishd-transfer-list-header-title"
          />
        </span>
      </div>
      <div
        class="fishd-transfer-list-body"
      >
        <ul
          class="fishd-transfer-list-content"
        >
          <li
            class="fishd-transfer-list-content-item"
            title="a"
          >
            <label
              class="fishd-checkbox-wrapper"
            >
              <span
                class="fishd-checkbox"
              >
                <input
                  class="fishd-checkbox-input"
                  type="checkbox"
                />
                <span
                  class="fishd-checkbox-inner"
                />
              </span>
            </label>
            <span>
              a
            </span>
          </li>
        </ul>
        <div
          class="fishd-transfer-list-body-not-found"
        >
          无匹配结果
        </div>
      </div>
    </div>
    <div
      class="fishd-transfer-operation"
    >
      <button
        class="fishd-btn fishd-btn-primary fishd-btn-sm fishd-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          class="fishdicon fishdicon-right"
        />
      </button>
      <button
        class="fishd-btn fishd-btn-primary fishd-btn-sm fishd-btn-icon-only"
        disabled=""
        type="button"
      >
        <i
          class="fishdicon fishdicon-left"
        />
      </button>
    </div>
    <div
      class="fishd-transfer-list"
    >
      <div
        class="fishd-transfer-list-header"
      >
        <label
          class="fishd-checkbox-wrapper"
        >
          <span
            class="fishd-checkbox"
          >
            <input
              class="fishd-checkbox-input"
              type="checkbox"
            />
            <span
              class="fishd-checkbox-inner"
            />
          </span>
        </label>
        <span
          class="fishd-transfer-list-header-selected"
        >
          <span>
            2 项
          </span>
          <span
            class="fishd-transfer-list-header-title"
          />
        </span>
      </div>
      <div
        class="fishd-transfer-list-body"
      >
        <ul
          class="fishd-transfer-list-content"
        >
          <li
            class="fishd-transfer-list-content-item"
            title="c"
          >
            <label
              class="fishd-checkbox-wrapper"
            >
              <span
                class="fishd-checkbox"
              >
                <input
                  class="fishd-checkbox-input"
                  type="checkbox"
                />
                <span
                  class="fishd-checkbox-inner"
                />
              </span>
            </label>
            <span>
              c
            </span>
          </li>
          <li
            class="fishd-transfer-list-content-item"
            title="b"
          >
            <label
              class="fishd-checkbox-wrapper"
            >
              <span
                class="fishd-checkbox"
              >
                <input
                  class="fishd-checkbox-input"
                  type="checkbox"
                />
                <span
                  class="fishd-checkbox-inner"
                />
              </span>
            </label>
            <span>
              b
            </span>
          </li>
        </ul>
        <div
          class="fishd-transfer-list-body-not-found"
        >
          无匹配结果
        </div>
      </div>
    </div>
  </div>
</div>
`;
